// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block-columns-container columnsCount 2 renders column children 1`] = `
<DocumentFragment>
  <div>
    <table
      align="center"
      border="0"
      cellpadding="0"
      style="table-layout: fixed; border-collapse: collapse;"
      width="100%"
    >
      <tbody
        style="width: 100%;"
      >
        <tr
          style="width: 100%;"
        >
          <td
            class="css-1uxtst9"
            style="box-sizing: content-box; vertical-align: middle;"
          >
            bread
          </td>
          <td
            class="css-192iasa"
            style="box-sizing: content-box; vertical-align: middle;"
          >
            tomato
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`block-columns-container columnsCount 3 renders column children 1`] = `
<DocumentFragment>
  <div>
    <table
      align="center"
      border="0"
      cellpadding="0"
      style="table-layout: fixed; border-collapse: collapse;"
      width="100%"
    >
      <tbody
        style="width: 100%;"
      >
        <tr
          style="width: 100%;"
        >
          <td
            class="css-1uxtst9"
            style="box-sizing: content-box; vertical-align: middle;"
          >
            bread
          </td>
          <td
            class="css-1uxtst9"
            style="box-sizing: content-box; vertical-align: middle;"
          >
            tomato
          </td>
          <td
            class="css-192iasa"
            style="box-sizing: content-box; vertical-align: middle;"
          >
            lettuce
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`block-columns-container renders with default values 1`] = `
<DocumentFragment>
  <div>
    <table
      align="center"
      border="0"
      cellpadding="0"
      style="table-layout: fixed; border-collapse: collapse;"
      width="100%"
    >
      <tbody
        style="width: 100%;"
      >
        <tr
          style="width: 100%;"
        >
          <td
            class="css-1uxtst9"
            style="box-sizing: content-box; vertical-align: middle;"
          />
          <td
            class="css-192iasa"
            style="box-sizing: content-box; vertical-align: middle;"
          />
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
